# ChatApplication

./: .gitignore  CMakeSettings.json  README.md
ChatApplication/: CMakeLists.txt  CMakeSettings.json  README.md
ChatApplication/include/: chat_client.hpp  chat_server.hpp  reader_writer.hpp
ChatApplication/src/: chat_client.cpp  chat_server.cpp  main.cpp  reader_writer.cpp
include/: chat_client.hpp  chat_server.hpp
src/: chat_client.cpp  chat_server.cpp  main.cpp  reader_writer.cpp
